git commit -m "Refactor: Standardize main and detail content responses" \ -m "축제/체험 백엔드 응답을 TourAPI2 Swagger 문서 기준에 맞게 정리한다.
- detailCommon2 요청에서 허용되지 않는 YN 옵션 제거
- detailCommon2를 기본 정보와 overview 소개글 조회 용도로 정리
- detailIntro2에 실제 contentTypeId를 전달하도록 수정
- detailCommon2, detailIntro2, detailImage2 응답을 조합해 상세 응답 생성
- response.body와 body 응답 구조를 모두 파싱하도록 Mapper 보완
- category와 themeCategory 역할 분리
- 메인 카드 표시용 timeLabel, timeValue, extraLabel, extraValue 추가
- 상세 주요 정보 표시용 mainInfo 추가
- 상세 소개 영역에서 사용할 description과 descriptionSource 추가
- 사용하지 않는 예전 카테고리/검색/표시 포맷 파일 제거

Related to: #4"